--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
+    <script src="https://cdn.tailwindcss.com"></script>
+
+
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
@@ -26,6 +29,7 @@
     <section class="content">
         <h1>Pokedex</h1>
 
+          
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
@@ -41,6 +45,21 @@
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
+
+    <script>
+        const detailsButton = document.getElementById('btn_details');
+        detailsButton.addEventListener('click', () => toggleModal('static-modal'));
+
+        const closeDetails = document.getElementById('btn_close_details');
+        closeDetails.addEventListener('click', () => toggleModal('static-modal'));
+
+
+        function toggleModal(modalId) {
+            const modal = document.getElementById(modalId);
+            modal.classList.toggle('hidden');
+        }
+
+    </script>
 </body>
 
 </html>
